--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <div class="portfolio-info">
               <h4>Machine Learning</h4>
               <div class="portfolio-links">
-                <a href="https://truecertificates.com/secure/snapshot/FBBGLXMTCB.png" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://www.linkedin.com/posts/nithish-reddy-65932a203_machinelearning-internship-certificate-activity-7038385324590342145-EtZW?utm_source=share&utm_medium=member_desktop" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
