--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="portfolio-info">
               <h4>Algorithms-Design and Analysis</h4>
               <div class="portfolio-links">
-                <a href="https://www.coursera.org/account/accomplishments/certificate/6THRQXYE9EHZ?utm_medium=certificate&amp;utm_source=link&amp;utm_campaign=copybutton_certificate" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
+                <a href="https://www.linkedin.com/posts/nithish-reddy-65932a203_machinelearning-internship-certificate-activity-7038385324590342145-EtZW?utm_source=share&utm_medium=member_desktop" target="_blank" title="Certificate"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
